--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/passwordTextView"
+        android:id="@+id/loginPasswordTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -17,7 +17,7 @@
         tools:layout_editor_absoluteY="421dp" />
 
     <EditText
-        android:id="@+id/emailAddressTextView"
+        android:id="@+id/loginEmailAddressTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -35,7 +35,7 @@
         tools:layout_editor_absoluteY="474dp" />
 
     <TextView
-        android:id="@+id/register"
+        android:id="@+id/loginRegisterLink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register"
@@ -43,11 +43,19 @@
         tools:layout_editor_absoluteY="529dp" />
 
     <TextView
-        android:id="@+id/forgetPassword"
+        android:id="@+id/loginForgetPasswordLink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forget Password?"
         tools:layout_editor_absoluteX="215dp"
         tools:layout_editor_absoluteY="529dp" />
+
+    <ProgressBar
+        android:id="@+id/loginProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="176dp"
+        tools:layout_editor_absoluteY="336dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
